<resources>
	<string name="app_name">Evolution</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="random_generate_world">Zufällig generieren</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="multiplayer_start_menu">Multiplayer starten</string>
    <string name="singleplayer_start_menu">Simulation starten</string>
    <string-array name="PlayerType">
        <item>Computergegner</item>
        <item>Spieler</item>
        <item>Unbesetzt</item>
    </string-array>
    <string name="delimiterint">.</string>
    <string name="explanation">Erklärungen</string>
    <string name="yourname">Dein Speziesname</string>
    <string name="selectworld">Wähle eine Welt</string>
    <string name="selectworldone">Erste Welt</string>
    <string name="selectworldtwo">Zweite Welt</string>
    <string name="selectworldthree">Dritte Welt</string>
    <string name="selectworldfour">Vierte Welt</string>
    <string name="time">Zeit</string>
    <string name="points">Punkte</string>
    <string name="title_activity_create_species">CreateSpeciesActivity</string>
    <string name="create_species_water">Wasserlebewesen</string>
    <string name="create_species_land">Landlebewesen</string>
    <string name="create_species_carnivore">Fleischfresser</string>
    <string name="create_species_non_carnivore">Pflanzenfresser</string>
    <string name="create_species_endo_skeleton">Endoskelett</string>
    <string name="create_species_exo_sceleton">Exoskelett</string>
    <string name="create_species_k_strategist">K-Stratege</string>
    <string name="create_species_r_strategist">r-Stratege</string>
    <string name="create_species_thin_fur">Dünnes Fell</string>
    <string name="create_species_thick_fur">Dickes Fell</string>
    <string name="create_species_button_play">Spiel starten!</string>
    <string name="create_species_points_left">übrige Punkte:</string>
    <string name="tab_title_skill_body">körperliche Merkmale</string>
    <string name="tab_title_skill_abilities">Fähigkeiten</string>
    <string name="res_dem_stat_1_str">sehr wenig</string>
    <string name="res_dem_stat_2_str">wenig</string>
    <string name="res_dem_stat_3_str">mäßig</string>
    <string name="res_dem_stat_4_str">übermäßig</string>
    <string name="res_dem_stat_5_str">viel</string>
    <string name="res_dem_stat_6_str">extrem viel</string>
    <string name="fragment_skill_dialog_change_button">Zeige Änderungen!</string>
    <string name="fragment_skill_dialog_change_button_back">Änderung rückgängig!</string>
    <string name="already_bought_dialog">Schon gekauft!</string>
    <string name="fragment_skill_dialog_not_backsillable">Zuerst müssen die spezielleren Eigenschaften zurückentwickelt werden!</string>
    <string name="title_progress_dialog_update">Spezies wird weiterentwickelt</string>
    <string name="text_progress_dialog_update">Erbgut wird neu strukturiert...</string>
    <string name="population_string">Population</string>
    <string name="natural_enemies">Natürliche Feinde:</string>
    <string name="ressources">Ressourcen:</string>
    <string name="desert">Wüste</string>
    <string name="water">Wasser</string>
    <string name="ice">Eis</string>
    <string name="jungle">Dschungel</string>
    <string name="land">Grasland</string>
    <string name="world">Planet</string>
    <string name="species_overview">Überblick</string>
    <string name="skill_species">Entwickeln</string>
    <string name="land_water_title">Land- &amp; Wasser Spezies</string>
    <string name="land_water_desc">Dieses Attribut legt fest, ob die Spezies im Wasser lebensfähig ist oder nicht. Eine Lebensfähigkeit im Wasser senkt allerdings andere Eigenschaften der Spezies.</string>
    <string name="carnivore_title">Fleischfresser &amp; Pflanzenfresser</string>
    <string name="carnivore_desc">Fleischfresser oder Pflanzenfresser? Ein Fleischfresser ist aufgrund besserer Proteinversorgung stärker, braucht allerdings auch mehr Resourcen und Rohstoffe als ein Pflanzenfresser!</string>
    <string name="skeleton_title">Endo- &amp; Exoskelett</string>
    <string name="skeleton_desc">Bei einem Exoskelett wird der Körper durch eine Außenhülle stabilisiert, wie bei einem Käfer, während eine Spezies mit Endoskelett sich durch Knochen im Inneren des Körpers stabilisieren. Dies führt zu mehr Beweglichkeit, allerdings ist man auch nicht so gut gegen Angreifer geschützt. </string>
    <string name="strategist_title">r- &amp; K-Strategen</string>
    <string name="strategist_desc">r- und K-Strategen bezeichnen die Fortpflanzungsstrategie der Spezies. r-Strategen haben sehr viele Nachkommen, überlassen sie dafür weitgehend sich selbst. K-Strategen haben wenig Nachkommen, kümmern sich dafür aber um diese.</string>
    <string name="fur_title">Dünnes &amp; dickes Fell</string>
    <string name="fur_desc">Durch dickes Fell passt man sich besser an kalte Regionen an, während man mit dünnem Fell auch in heißen Regionen überleben kann.</string>
	<string name="username">Benutzername</string>
	<string name="password">Passwort</string>
	<string name="passwordconfirm">Passwort bestätigen</string>
	<string name="youwon">Du bist die vorherrschende Spezies!</string>
	<string name="youlost">Du bist im Evolutionsrennen untergegangen!</string>
	<string name="gameendgoon">Weiter geht\'s!</string>
	<string name="evolutionpoints">Evolutionspunkte</string>
	<string name="climaticchange">Klimawandel!</string>
	<string name="meteorite">Meteoriteneinschlag!</string>
	<string name="iceage">Eiszeit!</string>
	<string name="todesert">Klimaerwärmung!</string>
	<string name="tojungle">Wetteränderungen!</string>
	<string name="toland">Moderatere Verhältnisse!</string>
	<string name="towasser">Meeresspiegel steigt!</string>
	<string name="climaticchangedesc">In einem Lebensraum hat es einen Klimawandel gegeben. Bist du noch gut genug angepasst?</string>
	<string name="meteoritedesc">In einem Bereich des Planten wurde sämtliches Leben durch einen Meteoriteneinschlag ausgelöscht!</string>
	<string name="iceagedesc">Es wird kalt! Aufgrund von Änderungen in der Atmosphäre kam es zu rapiden Abkühlungen! Es sieht aus als müsstest du dich an etwas Kälte gewöhnen!</string>
	<string name="todesertdesc">Fehlender Regen und andere Umstände haben zu einer Austrocknung des Planeten geführt, die das Entstehen einer neuen Wüste mit sich zieht. Wenig Ressourcen aber auch Feinde und besonders Lebensfeindliche Temperaturen sind charakteristisch für eine Wüste!</string>
	<string name="tojungledesc">Ein neuer Dschungel ist entstanden! Es wimmelt hier vor Leben, deine Spezies ist also gut versorgt, steht aber auch mehr Feinden gegenüber.</string>
	<string name="tolanddesc">Die Lebensumstände sind auf Teilen des Planeten normaler geworden. Möglicherwese ein Vorteil für deine Spezies.</string>
	<string name="towasserdesc">Flut! Der Planet wird von einer Flut heimgesucht, die eine größere Fläche überschwemmt hat. Kann deine Spezies im Wasser überleben? </string>
	<string name="speciesdiedtitle">Spezies ausgestorben!</string>
	<string name="speciesdieddesc">Einer deiner Konkurrenten im Evolutionsrennen ist ausgestorben. Damit bist du einen Schritt näher daran, die vorherrschende Spezies zu werden!</string>
	<string name="how_to_element_one_title">Deine Spezies</string>
	<string name="how_to_intelligence">Intelligenz: Die Intelligenz deiner Spezies bestimmt die Gewinnung von Ressourcen.</string>
	<string name="how_to_agility">Geschicklichkeit: Hilft auf der Flucht und im Kampf gegen natürliche Feinde.</string>
	<string name="how_to_strength">Stärke: Ausschlaggebend für den Kampf gegen konkurrierende Spezies.</string>
	<string name="how_to_social">Sozial: Bringt einen besseren Umgang miteinander bei Konflikten wie Knappheit.</string>
	<string name="how_to_procreation">Fortpflanzung: Bestimmt, wie viel Nachkommen entstehen und überleben.</string>
	<string name="how_to_description_game">Was ist Evolution? \n\nBei dieser Simulation geht es darum, mit deiner Spezies die vorherrschende Spezies auf einem Planenten zu werden. Dies passiert über Mutationen, die du für deine Spezies wählst, um sie bestens an die Umgebung anzupassen. Verschiedene Mutationen wirken sich anders auf die Attribute deiner Spezies aus. Auf den nächsten beiden Seiten findest du Erklärungen zu den verschiedenen Attributen deiner Spezies und wie sie sich auswirken.</string>
	<string name="how_to_resource_demand">Ressourcenverbrauch: Der Ressourcenverbrauch gibt an, wie viel Rohstoffe ein Exemplar deiner Spezies verbraucht.</string>
	<string name="how_to_movement">Fortbewegungsrate: Je höher die Fortbewegungsrate deiner Spezies, desto schneller breitet sie sich aus.</string>
	<string name="how_to_temperature">Temperatur: Der obere Teil der Temperaturanzeige gibt die Spanne deiner Spezies an, die untere die Temperatur die des Bereiches.</string>
	<string name="battlewings">Kampfflügel</string>
	<string name="battlewingsdesc">Kampfflügel verschaffen dir durch ihre gewaltige Kraft einen großen Vorteil im Kampf. Allerdings erhöht sich dadurch auch der Ressourcenbedarf deiner Spezies.</string>
	<string name="bettermuscles">Strukturierte Muskulatur</string>
	<string name="bettermusclesdesc">Durch die kompakte Strukturierung der Muskeln wird die Spezies um einiges Wendiger und auch stärker.</string>
	<string name="brain">Gehirn</string>
	<string name="braindesc">Stattet deine Spezies mit einem fortschrittlichen Gehirn aus. Das fördert sowohl soziale Interaktion als auch die Intelligenz.</string>
	<string name="centralnervsystem">Zentrales Nervensystem</string>
	<string name="centralnervsystemdesc">Hier wird der Grundstein für die Entwicklung eines Gehirns gelegt. Verbessert auch leicht Intelligenz und soziale Interaktion.</string>
	<string name="clawarm">Klauen</string>
	<string name="clawarmdesc">Eine gut im Kampf verwendbare, angeboren Waffe.</string>
	<string name="complextendonstructur">Sehnen</string>
	<string name="complextendonstructurdesc">Komplexer Sehnen geben deiner Spezies nochmal einen Schub an Beweglichkeit. </string>
	<string name="decotail">Schmückender Schwanz</string>
	<string name="decotaildesc">Ein Schwanz, der unter deiner Spezies für Begeisterung sorgt. Das resultiert sowohl in höherer sozialen Ineraktion als auch in besserer Fortpflanzungsrate.</string>
	<string name="dragonscale">Drachengleiche Schuppen</string>
	<string name="dragonscaledesc">Eine schier undurchdringliche Rüstung für deine Spezies! Dieser Schutz fordert allerdings auch in höherem Ressourcenverbrauch seinen Tribut.</string>
	<string name="extremityarm">Extremität</string>
	<string name="extremityarmdesc">Hiermit legst du einen Grundstein für eine Extremität.</string>
	<string name="extremityleg">Extremität</string>
	<string name="extremitylegdesc">Hiermit legst du einen Grundstein für eine Extremität.</string>
	<string name="eyes">Augen</string>
	<string name="eyesdesc">Erhöhen die Sichtweite deiner Spezies deutlich. Du kannst noch weiter in bisher unbesiedeltes Gebiet einsehen.</string>
	<string name="fighttail">Kampfschwanz</string>
	<string name="fighttaildesc">Eine unter Umständen tödlicher Schwanz für deine Gegner!</string>
	<string name="fatlayer">Fettschicht</string>
	<string name="fatlayerdesc">Ein guter Schutz vor extremer Kälte.</string>
	<string name="finextr">Flossen</string>
	<string name="finextrdesc">Diese Flossen lassen deine Spezies im Wasser überleben und lassen dich schneller ausbreiten. Der einzige Nachteil? Große Mutationen (und damit hohe Kosten) kommen auf dich zu.</string>
	<string name="flywings">Flügel</string>
	<string name="flywingsdesc">Längere zurücklegbare Strecken und eine erhöhte Beweglichkeit sind mit diesen Flügeln verbunden. Sehr nützlich!</string>
	<string name="footarm">Fuß</string>
</resources>